# bah2026-p15

./: .gitignore  ARCHITECTURE.md  README.md  idea.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.js  index.html  styles.css
docs/research/: 01-aditya-l1-payloads.md  02-satellite-fleet-30plus.md  03-detection-algorithms.md  04-forecasting-models.md  05-data-access-and-platform.md  06-data-fusion-gapfilling.md
edge/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
edge/src/: constants.ts  cron.ts  detector.ts  index.ts  types.ts
edge/test/: parity.mjs
examples/: 00_synth_demo.py  01_offline_demo.py  02_goes_live_nowcast.py  03_fusion_demo.py  04_train_forecast.py  05_serve_dashboard.py
examples/data/: xray-flares-7-day.sample.json  xrays-1-day.sample.json
flarecast/: __init__.py  constants.py  types.py
flarecast/api/: __init__.py  app.py  routes.py  sse.py  store.py
flarecast/catalog/: __init__.py  associate.py  confidence.py  dedup.py  index.py  schema.py
flarecast/cli/: __init__.py  main.py
flarecast/detect/: __init__.py  classify.py  cusum.py  focus.py  fsm.py  matched.py  primitives.py  stack.py  threshold.py
flarecast/forecast/: __init__.py  baselines.py  cv.py  evaluate.py  features.py  labels.py  leadtime.py  model_gbt.py  model_tcn.py
flarecast/fusion/: __init__.py  consensus.py  fuse.py  gapfill.py  ltt.py  pipeline.py  qc.py  registry.py  schema.py  stereo.py  timesync.py  xcal.py
flarecast/ingest/: __init__.py  base.py  cache.py  fido_sources.py  goes.py  normalize.py  pradan.py
flarecast/synth/: __init__.py  generator.py  noise.py  profiles.py
tests/: __init__.py  conftest.py  test_api.py  test_associate.py  test_catalog_index.py  test_classify.py  test_consensus.py  test_cusum_focus.py  test_features.py  test_forecast_eval.py  test_fsm.py  test_fuse.py  test_ingest_fallback.py  test_labels_cv.py  test_ltt.py  test_parity.py  test_primitives.py  test_xcal.py
tests/golden/: __init__.py  cusum_golden.json  generate_cusum_golden.py
