[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flarecast"
version = "0.1.0"
description = "Aditya FlareCast — automated soft + hard X-ray solar-flare nowcasting & forecasting (ISRO BAH 2026, PS-15)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aditya FlareCast team" }]
keywords = [
    "solar-flare",
    "space-weather",
    "aditya-l1",
    "solexs",
    "hel1os",
    "nowcasting",
    "forecasting",
    "x-ray",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

# Minimal offline core: the synthetic-data demo and the core test suite must
# run with only these. Heavier capabilities live in the optional groups below.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Real data sources (live + archive). See ARCHITECTURE.md Section 6.
real = [
    "astropy>=5.3",
    "sunpy>=5.0",
    "requests>=2.31",
    "cdasws>=1.7",
    "drms>=0.6",
]
# Machine-learning forecasters. LightGBM is the production tier; torch + onnx
# back the optional TCN challenger / ONNX export (ARCHITECTURE.md Section 5).
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "onnxruntime>=1.16",
    "torch>=2.0",
]
# Serving layer (ARCHITECTURE.md Section 7 / Appendix B.7).
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
# Development / CI tooling.
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.scripts]
flarecast = "flarecast.cli.main:main"

[project.urls]
Homepage = "https://github.com/divyamohan1993/bah2026-p15"
Documentation = "https://github.com/divyamohan1993/bah2026-p15/blob/main/ARCHITECTURE.md"

[tool.setuptools.packages.find]
include = ["flarecast*"]
exclude = ["tests*", "docs*", "examples*", "edge*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["flarecast", "tests"]

[tool.ruff.lint]
# A pragmatic, science-friendly rule set: pyflakes (F), pycodestyle (E/W),
# isort (I), pyupgrade (UP), flake8-bugbear (B), comprehensions (C4).
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E741",  # ambiguous variable names (l, k, h are physics-standard symbols)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
